testsuite/tests/typecheck/should_fail/CustomTypeErrors07.hs
{-# LANGUAGE DataKinds            #-}
{-# LANGUAGE FlexibleContexts     #-}
{-# LANGUAGE KindSignatures       #-}
{-# LANGUAGE PolyKinds            #-}
{-# LANGUAGE TypeFamilies         #-}
{-# LANGUAGE UndecidableInstances #-}

module CustomTypeErrors07 where

import GHC.TypeLits

badShow :: Show (TypeError ('Text "Bad show!")) => ()
badShow = ()

