testsuite/tests/typecheck/should_fail/CustomTypeErrors07.stderr
CustomTypeErrors07.hs:12:12:
     Bad show!
     In the type signature:
        badShow :: Show (TypeError ('Text "Bad show!")) => ()

